Update RecommendationService.java